vault/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
spec:
  rules:
    - host: "vault.tristan.moe"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vault-active
                port:
                  number: 8200
  tls:
    - hosts:
        - "vault.tristan.moe"
      secretName: wildcard-tristan-moe
